--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap");
+
 /*
 =============== 
 Variables
@@ -60,8 +62,7 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Mulish", sans-serif;
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -175,6 +176,10 @@ Menu
   border-radius: var(--radius);
 }
 .filter-btn:hover {
+  background: var(--clr-gold);
+  color: var(--clr-white);
+}
+.active {
   background: var(--clr-gold);
   color: var(--clr-white);
 }
